# mkw-distro-tool

./: .gitignore  Cargo.toml  README.MD  build.rs  index.html
.github/workflows/: action.yml
assets/: sw.js
res/: README.MD
src/: main.rs
src/apps/: codes.rs  mod.rs  settings.rs  tracks.rs
src/helpers/: custom_widget.rs  file.rs  mod.rs  parser.rs
