[package]
name = "mkw-distro-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19.0", features = ["serde"] }
eframe = { version = "0.19.0", features = ["serde"] }
rfd = "0.10.0"
egui_extras = {version = "0.19.0", features=["image"]}
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg"]}
serde = "1.0.145" 
serde_json = "1.0.86"
syntect = { version = "5", optional = true, default-features = false, features = ["default-fancy"] }
enum-map = { version = "2", features = ["serde"] }
resize = "0.7.4"

[features]
layouter = ["syntect"]